# construct

./: CHANGELOG.md  README.md  construct.cabal  stack.yaml
src/: Construct.hs
src/Construct/: Bits.hs  Classes.hs  Internal.hs
test/: Doctest.hs  MBR.hs  OrphanInstances.hs  TAR.hs  Test.hs  URI.hs  WMF.hs
test/examples/: project.tar  spec.uris
