cabal-version:       >=1.10
name:                construct
version:             0.1
synopsis:            Haskell implementation of the Construct library for easy specification of file formats
description:
   A Haskell version of the <https://construct.readthedocs.io/en/latest/intro.html Construct> library for Python. A
   succinct file format specification provides both a parser and the serializer for the format.
bug-reports:         https://github.com/blamario/construct/issues
license:             BSD3
license-file:        LICENSE
author:              Mario Blažević
maintainer:          Mario Blažević <blamario@protonmail.com>
copyright:           Mario Blažević 2020
category:            Data, Parsing, Serialization
build-type:          Custom
extra-source-files:  CHANGELOG.md, README.md, test/README.lhs
data-dir:            test/examples/
data-files:          wmf1.wmf
custom-setup
 setup-depends:
   base >= 4 && <5,
   Cabal,
   cabal-doctest >= 1 && <1.1
 

library
  -- other-modules:
  -- other-extensions:
  hs-source-dirs:      src
  exposed-modules:     Construct
  build-depends:       base >=4.11 && <4.13,
                       bytestring >= 0.10 && < 0.11,
                       monoid-subclasses >= 1.0 && < 1.1,
                       incremental-parser >= 0.3.4 && < 0.4,
                       parsers >= 0.11 && < 0.13,
                       cereal >= 0.5 && < 0.6,
                       rank2classes >= 1 && < 1.4,
                       grammatical-parsers >= 0.5 && < 0.6
  default-language:    Haskell2010

test-suite             doctests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  main-is:             Doctest.hs
  other-modules:       README
  ghc-options:         -threaded -pgmL markdown-unlit
  build-depends:       base, construct,
                       bytestring >= 0.10 && < 0.11, incremental-parser >= 0.3.4 && < 0.4, rank2classes >= 1.0.2 && < 1.4,
                       doctest >= 0.8
  build-tool-depends:  markdown-unlit:markdown-unlit >= 0.5 && < 0.6

test-suite             examples
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  x-uses-tf:           true
  build-depends:       base >=4.9 && < 5, construct,
                       bytestring < 0.11, text < 1.3, cereal, rank2classes >= 1.0.2 && < 1.4,
                       incremental-parser < 0.4, directory < 2, filepath < 1.5,
                       tasty >= 0.7, tasty-hunit
  main-is:             Test.hs
  other-modules:       WMF
  default-language:    Haskell2010
